# sandbox

./: CMakeLists.txt  LICENSE  README.md  easyirc  extensions.go  install.sh  net.go  sasl.go  streams.go  xml.go  xmldata.go  xmlread.go  xmpp.go
argonaut/src/client-core/css/: chat.css  rtc.css
argonaut/src/client-core/js/: 00-base.js  12-gui-chat.js  20-chat.js  20-rtc.js
argonaut/src/server-core/argonaut/: chat.js  core.js  core.py  rtc.js
argonaut/tools/: setup-ubuntu.sh
cmake/modules/: AddFlexTarget.cmake
coffee/: passgrid.coffee
coffee/passgrid/: LICENSE  README.md
coffee/passgrid/coffee/: passgrid.coffee
coffee/passgrid/js/: passgrid.js
examples/: basic.html
goxmpp/: AUTHORS  LICENSE  xmlread.go
goxmpp/client/: client.go
goxmpp/sasl/: sasl.go  scram.go
goxmpp/server/: README.md
js/: passgrid.js
man/: easyirc.1
parser/: preprocessor.h
potion/: install.sh
potion/src/potion/: __init__.py  daemonize.py  handlers.py  magic.py  util.py
potion/src/potion/irc/: __init__.py
sasl/: external.go
server/: server.go
src/: easyirc.py  irc-potion.py  main.cxx  strutils.cxx  strutils.h
src/client/: application.html  base.css  base.js  rtc.js
src/client-core/: application.html  base.js  core.html  rtc.js
src/client-core/css/: base.css  chat.css  rtc.css  theme-classic-dark.css
src/client-core/js/: 10-gui.js  12-gui-chat.js  12-gui-rtc.js  20-rtc.js  base.js  chat.js  client.js  gui-chat.js  gui-rtc.js  gui.js  rtc.js
src/client-core/socket.io/: socket.io.js
src/cpp/: compiler.h  cpp.cxx  cpp.h
src/cpp/parser/: lexer.h  lexer.lxx  parser.h  parser.yxx  tokens.h
src/cpp/preprocessor/: lexer.lxx  parser.yxx
src/easy/: Logger.py  arguments.py  magic.py
src/irc/: Command.py  Connection.py  constants.py
src/parser/: cpp.cxx  cpp.h  env.cxx  env.h  lexer.cxx  lexer.h  lexer.hxx  lexer.lxx  parseObjs.h  parser.cxx  parser.dxx  parser.h  parser.hxx  parser.output  parser.yxx  tree.hxx
src/parser/preprocess/: prelexer.cxx  prelexer.h  prelexer.lxx  preparser.cxx  preparser.dxx  preparser.h  preparser.output  preparser.yxx
src/potion/: Logger.py  Pipe.py  __init__.py  arguments.py  magic.py  util.py
src/potion/irc/: Command.py  Connection.py  constants.py  util.py
src/server-core/: base.js  server.js  server.py
src/server-core/argonaut/: chat.js  chat.py  client.js  client.py  core.js  core.py  httphandlers.py  router.py  rtc.js  rtc.py  util.js  util.py
src/tests/: test_parse.cxx  test_simple_classes.cxx  test_simple_classes.src  test_simple_struct.cxx  test_simple_templates.cxx  testbase.h
src/util/: strings.cxx  strings.h
tools/: compile.sh  setup-ubuntu.sh
tools/Closure/externs/: jquery-1.9.js
treesap/latest-bison/src/cpp/preprocessor/: lexer.h
treesap/latest-bison/src/tests/: test_template_declarations.cxx
treesap/latest-bison/src/util/: templates.h
treesap/master/cmake/modules/: AddBisonTarget.cmake
treesap/master/src/cpp/: cpp.cxx
treesap/master/src/cpp/parser/: parser.yxx  tokens.h
treesap/master/src/cpp/preprocessor/: parser.h
treesap/master/src/tests/: test_system_stl.cxx
treesap/no-bison/cmake/modules/: AddParserDirectory.cmake
treesap/no-bison/src/cpp/: compiler.cxx
treesap/no-bison/src/cpp/parser/: lexer.h  parser.yxx  tokens.h
treesap/no-bison/src/tests/: test_macro_expansion.cxx
treesap/no-bison/src/util/: strings.cxx  strings.h  system.cxx  system.h
